fix: break link on small viewport

--- a/styles/components/_privacy-policy.scss
+++ b/styles/components/_privacy-policy.scss
@@ -2,4 +2,8 @@
   h3 {
     margin-top: 2rem;
   }
+
+  a {
+    word-break: break-word;
+  }
 }
